[gd_scene load_steps=5 format=3 uid="uid://ct6bvt0jbc3hh"]

[ext_resource type="Script" uid="uid://dptnn6ewfhnr" path="res://Entities/entities_scripts/bullet_1.gd" id="1_w6bhc"]
[ext_resource type="Texture2D" uid="uid://djk815us8x8va" path="res://Sprites/bullet_missile.png" id="2_gtkaa"]
[ext_resource type="AudioStream" uid="uid://nqrkco01hlp2" path="res://SoundEffects/impact_bazooka.ogg" id="3_8skf3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y45nb"]
size = Vector2(16, 8)

[node name="bullet_1" type="Area2D" groups=["Bullet", "bazooka", "player_projectiles"]]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 8
script = ExtResource("1_w6bhc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 9.53674e-07)
scale = Vector2(0.25, 0.261905)
texture = ExtResource("2_gtkaa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y45nb")

[node name="visible" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(6.4373e-07, 0)
scale = Vector2(0.8, 0.4)

[node name="AudioStreamImpactBazooka" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8skf3")
volume_db = -6.0
panning_strength = 0.0
area_mask = 40

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="visible" to="." method="_on_visible_screen_exited"]
